Java 5; cleanups